--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~48.0.6",
     "expo-dev-client": "~2.2.1",
     "expo-haptics": "~12.2.1",
+    "expo-image": "~1.0.2",
     "expo-linear-gradient": "~12.1.2",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
@@ -31,6 +32,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.2",
     "react-redux": "^9.0.1"
   },
