--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "react-native": "0.71.14",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-google-mobile-ads": "^10.0.1",
+    "react-native-image-colors": "^2.4.0",
     "react-native-pager-view": "6.1.2",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.2",
-    "react-redux": "^9.0.1",
-    "react-native-reanimated": "~2.14.4"
+    "react-redux": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
