--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Flixd",
-    "slug": "Flixd",
+    "slug": "ReelRecs",
     "version": "2.0.1",
     "orientation": "portrait",
     "icon": "./assets/AppLogo.png",
@@ -14,7 +14,7 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.aslick.Flixd"
+      "bundleIdentifier": "com.aslick.ReelRecs"
     },
     "android": {
       "adaptiveIcon": {
