--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@miblanchard/react-native-slider": "^2.3.1",
     "@react-native-community/slider": "4.4.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^2.0.1",
@@ -27,14 +26,14 @@
     "react-native": "0.71.14",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-google-mobile-ads": "^10.0.1",
-    "react-native-image-colors": "^2.4.0",
     "react-native-pager-view": "6.1.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.2",
-    "react-redux": "^9.0.1"
+    "react-redux": "^9.0.1",
+    "expo-build-properties": "~0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
