--- a/package.json
+++ b/package.json
@@ -14,26 +14,26 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@types/lodash": "^4.14.202",
     "axios": "^1.3.4",
-    "expo": "~48.0.6",
-    "expo-dev-client": "~2.2.1",
-    "expo-haptics": "~12.2.1",
-    "expo-image": "~1.0.2",
-    "expo-linear-gradient": "~12.1.2",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^50.0.13",
+    "expo-build-properties": "~0.11.1",
+    "expo-dev-client": "~3.3.10",
+    "expo-haptics": "~12.8.1",
+    "expo-image": "~1.10.6",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-native": "0.71.14",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native": "0.73.5",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-google-mobile-ads": "^10.0.1",
-    "react-native-pager-view": "6.1.2",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-pager-view": "6.2.3",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.20.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "14.1.0",
     "react-native-tab-view": "^3.5.2",
-    "react-redux": "^9.0.1",
-    "expo-build-properties": "~0.6.0"
+    "react-redux": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -41,7 +41,7 @@
     "@types/react-native": "^0.72.8",
     "@types/react-navigation": "^3.4.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
-    "typescript": "^4.9.4"
+    "typescript": "^5.3.0"
   },
   "private": true,
   "name": "Flixd",
