--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@miblanchard/react-native-slider": "^2.3.1",
     "@react-native-community/slider": "4.4.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^2.0.1",
