--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.3.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/slider": "4.4.2",
+    "@react-native-community/slider": "4.5.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.6",
@@ -16,35 +16,35 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@types/lodash": "^4.14.202",
     "axios": "^1.3.4",
-    "expo": "^51.0.0",
-    "expo-build-properties": "~0.11.1",
-    "expo-dev-client": "~3.3.10",
-    "expo-haptics": "~12.8.1",
-    "expo-image": "~1.10.6",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
+    "expo": "51.0.1",
+    "expo-build-properties": "~0.12.1",
+    "expo-dev-client": "~4.0.12",
+    "expo-haptics": "~13.0.1",
+    "expo-image": "~1.12.9",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-native": "0.73.5",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-google-mobile-ads": "^10.0.1",
-    "react-native-pager-view": "6.2.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "^3.20.0",
-    "react-native-svg": "14.1.0",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "3.10.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-redux": "^9.0.1",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.2.42",
+    "@types/react": "~18.2.79",
     "@types/react-native": "^0.72.8",
     "@types/react-navigation": "^3.4.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
-    "typescript": "^5.3.0"
+    "typescript": "~5.3.3"
   },
   "private": true,
   "name": "Flixd",
