--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^2.0.1",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@shopify/flash-list": "1.6.4",
     "@types/lodash": "^4.14.202",
     "axios": "^1.3.4",
     "expo": "51.0.1",
@@ -36,8 +39,7 @@
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-redux": "^9.0.1",
-    "redux-persist": "^6.0.0",
-    "@shopify/flash-list": "1.6.4"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
