--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.3.1",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "4.5.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-top-tabs": "^6.6.13",
@@ -19,7 +19,7 @@
     "@shopify/flash-list": "1.6.4",
     "@types/lodash": "^4.14.202",
     "axios": "^1.3.4",
-    "expo": "51.0.1",
+    "expo": "^51.0.32",
     "expo-build-properties": "~0.12.1",
     "expo-dev-client": "~4.0.12",
     "expo-haptics": "~13.0.1",
@@ -29,17 +29,19 @@
     "expo-status-bar": "~1.12.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-native": "0.74.1",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-mobile-ads": "^10.0.1",
     "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "3.10.0",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-redux": "^9.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
