--- a/app.json
+++ b/app.json
@@ -11,6 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#15182D"
     },
+    "scheme": "flixd",
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
@@ -30,7 +31,7 @@
         "projectId": "45ee09ec-c467-4083-8e3c-3475db5b784a"
       }
     },
-    "plugins": ["expo-build-properties"]
+    "plugins": ["expo-build-properties", "expo-router"]
   },
   "react-native-google-mobile-ads": {
     "ios_app_id": "ca-app-pub-7362913181463643~1224850479"
