--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ios": "react-native run-ios",
     "web": "expo start --web"
   },
+  "main": "expo-router/entry",
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.3.1",
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -19,18 +20,22 @@
     "@shopify/flash-list": "1.6.4",
     "@types/lodash": "^4.14.202",
     "axios": "^1.3.4",
-    "expo": "^51.0.32",
+    "expo": "~51.0.39",
     "expo-build-properties": "~0.12.1",
-    "expo-dev-client": "~4.0.12",
+    "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.29",
     "expo-haptics": "~13.0.1",
-    "expo-image": "~1.12.9",
+    "expo-image": "~1.13.0",
     "expo-linear-gradient": "~13.0.2",
-    "expo-splash-screen": "~0.27.4",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.24",
+    "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-animated-dots-carousel": "^2.0.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-mobile-ads": "^10.0.1",
     "react-native-pager-view": "6.3.0",
