--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-redux": "^9.0.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.13",
-    "expo-system-ui": "~3.0.7"
+    "expo-system-ui": "~3.0.7",
+    "@react-native-community/netinfo": "11.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
